@@ -33,6 +33,7 @@ BZFlag 1.7e3
 * udp first then multicast, IRIX fix? (use -i <> for multicast) - Tim Riker
 * enhanced radar - Jeremiah
 * don't relay read in player read - Frank Thilo, Tim Riker
+* -fb flags on box buildings - Tim Riker, Colin Bayer
 
 
 BZFlag 1.7e2
